--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -15,7 +15,7 @@
   flex-direction: row;
 }
 
-.landing img {
+/* .landing img {
   width: 100%;
   height: 100%;
   border-radius: 0;
@@ -25,7 +25,7 @@
   left: 0;
   top: 0;
   z-index: -1;
-}
+} */
 .overlay {
   width: 100%;
   height: 100%;
@@ -126,9 +126,18 @@ Text.job::selection {
 
 .photo-handler {
   min-width: 250px;
-  min-height: 250px;
+  height: 250px;
   border: 5px solid black;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.photo-handler img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
 }
 
 @keyframes motion {
