--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -19,29 +19,38 @@
   margin-bottom: 20px;
 }
 .contact-form {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 form {
-    display: flex;
-    width: 50%;
-    flex-direction: column;
-    padding: 20px;
-    border: solid 3px ;
-    border-radius: 10px;
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  padding: 20px;
+  border: solid 3px;
+  border-radius: 10px;
 }
 form label {
-    font-size: 1.2rem;
-    
+  font-size: 1.2rem;
 }
 form input {
-    padding: 10px;
-    margin: 5px 0;
-    background-color: transparent;
-    border-radius: 10px;
-    border: solid 3px ;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: transparent;
+  border-radius: 10px;
+  border: solid 3px;
+}
+form textarea {
+  padding: 10px;
+  margin: 10px 0;
+  min-height: 50px;
+  overflow-y: hidden;
+  background-color: transparent;
+  border-radius: 10px;
+  border: solid 3px;
 }
 
-form button {}
+form button {
+}
