--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -3,7 +3,8 @@
   padding: 50px 10px;
   border-top: 5px solid black;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
   background-color: #c6c5c2;
   font-size: 1rem;
@@ -11,9 +12,14 @@
 }
 
 .bold {
-    font-weight: bold;
-    margin: 0 10px;
-    display: inline-block;
+  font-weight: bold;
+  margin: 0 10px;
+  display: inline-block;
+}
+
+h4 {
+  font-size: 1.5rem;
+  margin-bottom: 25px;
 }
 
 .footer a {
