--- a/src/Components/AboutStyle.css
+++ b/src/Components/AboutStyle.css
@@ -1,19 +1,19 @@
 #About {
-    /* background-color: white; */
-    color: black;
-    border: 5px solid black;
-    border-radius: 50px;
-    margin-bottom: var(--main-margin);
-    width: 75%;
-    padding: var(--main-padding);
+  /* background-color: white; */
+  color: black;
+  border: 5px solid black;
+  /* border-radius: 50px; */
+  margin-bottom: var(--main-margin);
+  width: 75%;
+  padding: var(--main-padding);
 }
 
 .Heading {
-    font-size: 4rem;
-    font-weight: 800;
-    border-bottom: 3px solid;
-    color: black;
-    text-align: center;
+  font-size: 4rem;
+  font-weight: 800;
+  border-bottom: 3px solid;
+  color: black;
+  text-align: center;
 }
 
 /* #About .container {
@@ -21,47 +21,47 @@
 } */
 
 #About .box {
-    display: flex;
-
+  display: flex;
 }
 
 #About .my-photo {
-    width: 20%;
-    height: 70%;
-    display: flex;
-    /* flex-grow: 1; */
-    border: solid 3px black;
+  width: 20%;
+  height: 70%;
+  display: flex;
+  /* flex-grow: 1; */
+  border: solid 3px black;
 }
 
 #About .my-photo img {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    border-radius: 0%;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  border-radius: 0%;
 }
 
 #About .About-me-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    margin: 50px 5px;
-    font-size: 1.3rem;
-    /* letter-spacing: 2px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  margin: 50px 5px;
+  font-size: 1.3rem;
+  /* letter-spacing: 2px; */
 }
 .About-me-content .section:first-child {
-   width: 70%;
+  width: 70%;
 }
+
 #About p {
-    width: 100%;
-    color: black;
-    font-size: 1.2rem;
+  width: 100%;
+  color: black;
+  font-size: 1.2rem;
 }
 .boldy {
-    font-weight: 800;
-    display: block;
-    font-size: 1.5rem;
-    padding: 0 0 15px ;
+  font-weight: 800;
+  display: block;
+  font-size: 1.5rem;
+  padding: 0 0 15px;
 }
 
 /* #About .section {
@@ -73,8 +73,50 @@
 } */
 
 .cv-btn {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 768px) {
+  #About {
+    padding: 80px 15px;
+  }
+
+  .box .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #About .About-me-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .About-me-content .section:first-child {
+    width: 70%;
+  }
+  #About .section {
+    width: 100%;
+  }
+  #About p {
+    width: 100%;
+    color: black;
+    font-size: 1.2rem;
+    text-align: center;
+  }
+  .boldy {
+    font-weight: 800;
+    display: block;
+    font-size: 1.5rem;
+    padding: 0 0 15px;
+  }
+
+  .cv-btn {
     width: 25%;
+    min-width: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
 }
