--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -3,10 +3,11 @@
   margin-right: 0;
 }
 
-.landing, .box-section {
+.landing,
+.box-section {
   height: auto;
   width: 75%;
-  border-radius: 50px;
+  /* border-radius: 50px; */
   padding: var(--main-padding);
   margin-bottom: var(--main-margin);
   display: flex;
@@ -88,7 +89,8 @@ Text.job::selection {
   font-size: 1.5rem;
 }
 
-.my-Work-btn, .btn {
+.my-Work-btn,
+.btn {
   padding: 10px 20px;
   font-size: 1rem;
   font-weight: 600;
@@ -154,4 +156,47 @@ Text.job::selection {
 
 .more-btn a:hover span {
   background-color: var(--secondry-color);
+}
+
+@media screen and (max-width: 768px) {
+  .landing, .box-section {
+    padding: 80px 15px;
+    flex-direction: column-reverse;
+  }
+  .landing .container-landing {
+    color: var(--secondry-color);
+    /* margin: 20px auto; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .Text {
+    width: 100%;
+    text-align: center;
+  }
+  .Text .name {
+    text-align: center;
+    font-size: 1.6rem;
+  }
+
+  .Text .job {
+    font-size: 1.2rem;
+  }
+
+  .photo-handler {
+    min-width: 150px;
+    height: 150px;
+    border: 5px solid black;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .photo-handler img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
 }
