--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -52,5 +52,46 @@ form textarea {
   border: solid 3px;
 }
 
-form button {
+@media screen and (max-width: 768px) {
+  .quote {
+    text-align: center;
+  }
+  #arrow {
+    font-size: 3rem;
+    margin-bottom: 10px;
+  }
+
+  .contact-form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  form {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding: 12px;
+    border: solid 3px;
+    border-radius: 10px;
+  }
+  form label {
+    font-size: 1.2rem;
+  }
+  form input {
+    padding: 10px;
+    margin: 10px 0;
+    background-color: transparent;
+    border-radius: 10px;
+    border: solid 3px;
+  }
+  form textarea {
+    padding: 10px;
+    margin: 10px 0;
+    min-height: 50px;
+    overflow-y: hidden;
+    background-color: transparent;
+    border-radius: 10px;
+    border: solid 3px;
+  }
 }
