--- a/src/Components/AboutStyle.css
+++ b/src/Components/AboutStyle.css
@@ -1,19 +1,27 @@
 #About {
-  /* background-color: white; */
   color: black;
   border: 5px solid black;
   /* border-radius: 50px; */
   margin-bottom: var(--main-margin);
-  width: 75%;
   padding: var(--main-padding);
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
 }
-
+#About .container {
+  align-items: center;
+}
 .Heading {
   font-size: 4rem;
   font-weight: 800;
   border-bottom: 3px solid;
   color: black;
   text-align: center;
+}
+#About .Heading {
+  width: auto;
 }
 
 /* #About .container {
@@ -22,6 +30,42 @@
 
 #About .box {
   display: flex;
+}
+.stack {
+  margin: 30px 15px 30px 0;
+  font-size: 1.3rem;
+}
+#About i {
+  margin: 1px 25px;
+  font-size: 2.3rem;
+}
+
+i.fa-html5 {
+  color: #f59714;;
+}
+i.fa-css3-alt {
+  color: #74C0FC;;
+}
+i.fa-js {
+  color: yellow;
+  /* background-color: black; */
+  /* padding: 0; */
+  position: relative;
+  /* border: 0; */
+}
+
+i.fa-js::after {
+  content: "";
+  background-color: black;
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 60%;
+  left: 0;
+  bottom: 6%;
+}
+i.fa-react {
+  color: #74C0FC;;
 }
 
 #About .my-photo {
@@ -52,6 +96,8 @@
   width: 70%;
 }
 
+
+
 #About p {
   width: 100%;
   color: black;
@@ -77,6 +123,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: flex-start;
 }
 @media screen and (max-width: 768px) {
   #About {
@@ -119,4 +166,24 @@
     align-items: center;
     justify-content: center;
   }
+  
 }
+
+@media screen and (max-width:425px){
+  .stack {
+    margin: 20px 10px 20px 0;
+    font-size: 1.1rem;
+  }
+  .tech-icons {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 0;
+  }
+  #About i {
+    margin: 1px 15px;
+    font-size: 2rem;
+  }
+  
+} 
