--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -129,8 +129,9 @@ Text.job::selection {
 .photo-handler {
   min-width: 250px;
   height: 250px;
-  border: 5px solid black;
-  border-radius: 10px;
+  /* border: 3px solid black; */
+  border-bottom: 3px solid white;
+  /* border-radius: 10px; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -142,7 +143,7 @@ Text.job::selection {
   border-radius: 0;
 }
 
-@keyframes motion {
+/* @keyframes motion {
   0% {
     transform: translateY(-10px) rotate(45deg);
   }
@@ -152,7 +153,7 @@ Text.job::selection {
   100% {
     transform: translateY(0px) rotate(45deg);
   }
-}
+} */
 
 .more-btn a:hover span {
   background-color: var(--secondry-color);
@@ -187,8 +188,7 @@ Text.job::selection {
   .photo-handler {
     min-width: 150px;
     height: 150px;
-    border: 5px solid black;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -197,6 +197,7 @@ Text.job::selection {
   .photo-handler img {
     width: 100%;
     height: 100%;
+    /* border: 5px solid white; */
     border-radius: 0;
   }
 }
