--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  padding: 50px 10px;
+  padding: 30px 10px;
   border-top: 5px solid black;
   display: flex;
   align-items: center;
@@ -11,25 +11,33 @@
   font-weight: 900;
 }
 
+.personal-data {
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .bold {
   font-weight: bold;
   margin: 0 10px;
+  margin-bottom: 25px;
   display: inline-block;
 }
 
 h4 {
   font-size: 1.5rem;
-  margin-bottom: 25px;
 }
 
 .footer a {
   text-decoration: none;
-  transform: scale(0);
   color: black;
+  transition: all 0.1s linear;
 }
 
 .footer a:hover {
-  transform: scale(1.5);
+  color: #34495e;
+  font-size: 1.02rem;
 }
 
 .phone {
