--- a/src/Components/AboutStyle.css
+++ b/src/Components/AboutStyle.css
@@ -20,6 +20,13 @@
   color: black;
   text-align: center;
 }
+
+@media screen and (max-width: 425px) {
+  .Heading {
+    font-size: 3rem;
+  }
+}
+
 #About .Heading {
   width: auto;
 }
@@ -41,10 +48,10 @@
 }
 
 i.fa-html5 {
-  color: #f59714;;
+  color: #f59714;
 }
 i.fa-css3-alt {
-  color: #74C0FC;;
+  color: #74c0fc;
 }
 i.fa-js {
   color: yellow;
@@ -55,7 +62,7 @@ i.fa-js {
 }
 
 i.fa-js::after {
-  content: "";
+  content: '';
   background-color: black;
   z-index: -1;
   position: absolute;
@@ -65,7 +72,7 @@ i.fa-js::after {
   bottom: 6%;
 }
 i.fa-react {
-  color: #74C0FC;;
+  color: #74c0fc;
 }
 
 #About .my-photo {
@@ -95,8 +102,6 @@ i.fa-react {
 .About-me-content .section:first-child {
   width: 70%;
 }
-
-
 
 #About p {
   width: 100%;
@@ -158,18 +163,21 @@ i.fa-react {
     font-size: 1.5rem;
     padding: 0 0 15px;
   }
+  #About .my-photo {
+    display: none;
+  }
 
   .cv-btn {
     width: 25%;
     min-width: 100px;
     display: flex;
     align-items: center;
+    align-self: center;
     justify-content: center;
   }
-  
 }
 
-@media screen and (max-width:425px){
+@media screen and (max-width: 426px) {
   .stack {
     margin: 20px 10px 20px 0;
     font-size: 1.1rem;
@@ -184,6 +192,7 @@ i.fa-react {
   #About i {
     margin: 1px 15px;
     font-size: 2rem;
-  }
-  
-} 
+  } 
+  .cv-btn {
+    min-width: 120px;
+  }}
