--- a/src/Components/HeaderStyle.css
+++ b/src/Components/HeaderStyle.css
@@ -17,14 +17,14 @@ html {
   background-color: #d6d5d2;
 }
 
-@font-face {
+/* @font-face {
   font-family: 'poppins';
   src: url('../Protest_Riot/ProtestRiot-Regular.ttf');
 }
 @font-face {
   font-family: 'bold-poppins';
   src: url('../../public/assets/font/Poppins-Bold.ttf');
-}
+} */
 /* @font-face {
   font-family: 'poppins';
   src: url('../Lobster/Lobster-Regular.ttf');
@@ -42,14 +42,14 @@ html {
   font-family: 'bold-poppins';
   src: url('../../public/assets/font/Poppins-Bold.ttf');
 } */
-/* @font-face {
+@font-face {
   font-family: 'poppins';
   src: url('../../public/assets/font/Poppins-Regular.ttf');
 }
 @font-face {
   font-family: 'bold-poppins';
   src: url('../../public/assets/font/Poppins-Bold.ttf');
-} */
+}
 
 * {
   padding: 0;
@@ -65,15 +65,15 @@ header {
   color: black;
   width: 100%;
   margin-bottom: var(--main-margin);
-  border-bottom: 5px solid black;
+  /* border-bottom: 5px solid black; */
   background-color: #d6d5d2;
 }
-
 .container {
   display: flex;
   margin: 0 auto;
   padding: 0 15px;
   flex-direction: column;
+  /* width: 100%; */
 }
 @media (min-width: 768px) {
   .container {
@@ -132,20 +132,39 @@ header a {
   padding: 5px 5px;
   background-color: transparent;
   color: white;
-  border-radius: 30px;
+  /* border-radius: 30px; */
   text-decoration: none;
   transition: all 0.1s linear;
 }
+
+.nav {
+  width: 100%;
+}
+.nav li {
+  text-decoration: none;
+  list-style-type: none;
+  text-transform: uppercase;
+}
 .nav a {
+  width: 20%;
   padding: 5px 10px;
-  margin: 0 10px;
+  margin: 0 auto;
   background-color: transparent;
   color: black;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   text-decoration: none;
   transition: all 0.1s linear;
   font-size: 1rem;
   font-weight: 800;
+}
+
+@media screen and (max-width: 326px) {
+  header .container {
+    padding: 10px;
+  }
+  .nav a {
+    padding: 5px 8px;
+  }
 }
 
 .nav a::selection {
@@ -154,7 +173,7 @@ header a {
 
 header a:hover {
   /* background-color: var(--secondry-color); */
-  background-color: black;
+  /* background-color: black; */
   color: white;
   transform: rotate(10deg);
   transform: scale(1.09);
@@ -166,12 +185,18 @@ header a:hover {
   /* justify-content: center; */
   margin: 20px 25px;
 }
-.icons a {
-  /* background-color: blue; */
-  padding: 5px;
+header .icons a {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: fit-content; */
+  padding: 10px;
+  margin: 0px 10px;
 }
 .icons i {
-  margin: 0 5px;
+  /* margin: 0 10px; */
+  /* padding: 5px; */
   color: black;
   font-size: 1.4rem;
   transition: all 0.2s ease-in-out;
@@ -180,13 +205,13 @@ header a:hover {
 
 .icons i:hover {
   /* color: white; */
-  /* background-color: white; */
-  color: white;
+  /* background-color: black; */
+  /* color: white; */
   transform: rotate(10deg);
   transform: scale(1.09);
 }
-
-
+/* header .icons a:hover .icons i {
+  color: white;
+} */
 @media screen and (max-width: 979px) {
-  
 }
