--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -16,24 +16,12 @@
   flex-direction: row;
 }
 
-/* .landing img {
-  width: 100%;
-  height: 100%;
-  border-radius: 0;
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: -1;
-} */
 .overlay {
   width: 100%;
   height: 100%;
   border-radius: 0;
   padding: 0;
   margin: 0;
-  /* background-color: rgba(0, 0, 0, 0.5); */
   position: absolute;
   left: 0;
   top: 0;
@@ -98,7 +86,6 @@ Text.job::selection {
   border-radius: 10px;
   position: relative;
   transition: color 0.3s linear;
-  /* background-color: #d6d5d2; */
   background-color: transparent;
   border: black solid 4px;
   text-transform: uppercase;
@@ -130,9 +117,8 @@ Text.job::selection {
 .photo-handler {
   min-width: 250px;
   height: 250px;
-  /* border: 3px solid black; */
-  border-bottom: 3px solid white;
-  /* border-radius: 10px; */
+  border: 10px  black;
+  border-style: double;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -144,17 +130,6 @@ Text.job::selection {
   border-radius: 0;
 }
 
-/* @keyframes motion {
-  0% {
-    transform: translateY(-10px) rotate(45deg);
-  }
-  50% {
-    transform: translateY(-15px) rotate(45deg);
-  }
-  100% {
-    transform: translateY(0px) rotate(45deg);
-  }
-} */
 
 .more-btn a:hover span {
   background-color: var(--secondry-color);
@@ -167,7 +142,6 @@ Text.job::selection {
   }
   .landing .container-landing {
     color: var(--secondry-color);
-    /* margin: 20px auto; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -189,7 +163,6 @@ Text.job::selection {
   .photo-handler {
     min-width: 150px;
     height: 150px;
-    /* border-radius: 10px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -198,7 +171,6 @@ Text.job::selection {
   .photo-handler img {
     width: 100%;
     height: 100%;
-    /* border: 5px solid white; */
     border-radius: 0;
   }
 }
