--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -14,10 +14,66 @@
 #arrow {
   font-size: 3rem;
 }
+@keyframes together {
+  0% {
+    left: -50px;
+  }
+  25% {
+    left: 0;
+  }
+  50% {
+    left: 50%;
+  }
+  75% {
+    left: 75%;
+  }
+  100% {
+    left: 110%;
+  }
+}
 #together {
   font-size: 1.4rem;
   margin-bottom: 20px;
+  padding: 5px;
+  border: 2px solid ;
+  position: relative;
+  animation: together alternate infinite;
+  box-shadow: black 5px 5px 1px 1px;
+  overflow: hidden;
+  
 }
+
+#together::before {
+  content: "";
+  background-color: #d6d5d2;
+  border: 1px solid;
+  width: 25px;
+  height: 150px;
+  position: absolute;
+  left: -60px;
+  top: -50px;
+  transform: rotate(45deg);
+  transition: all 0.6s linear;
+}
+/* #together::after {
+  content: "";
+  background-color: black;
+  width: 15px;
+  height: 150px;
+  position: absolute;
+  left: -100px;
+  top: -50px;
+  transform: rotate(45deg);
+  transition: all 0.5s linear;
+} */
+#together:hover::before {
+  left: 115%;
+}
+/* #together:hover::after {
+  left: 110%;
+} */
+
+
 .contact-form {
   width: 100%;
   display: flex;
