--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -33,6 +33,8 @@
   color: var(--secondry-color);
   margin: 20px auto;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 768px) {
@@ -78,20 +80,39 @@ Text.job::selection {
   font-size: 1.5rem;
 }
 
-.my-Work-btn,
+/* .my-Work-btn, */
 .btn {
+  width: fit-content;
   padding: 10px 20px;
   font-size: 1rem;
   font-weight: 600;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   position: relative;
-  transition: color 0.3s linear;
+  /* transition: color 0.3s linear; */
   background-color: transparent;
-  border: black solid 4px;
+  border: black solid 3px;
   text-transform: uppercase;
   cursor: pointer;
+  box-shadow: black 5px 5px 1px 1px;
+  overflow: hidden;
 }
 .btn::before {
+  content: "";
+  background-color: #d6d5d2;
+  border: 1px solid;
+  width: 25px;
+  height: 150px;
+  position: absolute;
+  left: -60px;
+  top: -50px;
+  transform: rotate(45deg);
+  transition: all 0.6s linear;
+}
+.btn:hover::before {
+  left: 115%;
+}
+
+/* .btn::before {
   content: '';
   width: 100%;
   height: 100%;
@@ -112,12 +133,15 @@ Text.job::selection {
 
 .btn:hover::before {
   transform: scaleX(1);
-}
+} */
+
+
+
 
 .photo-handler {
   min-width: 250px;
   height: 250px;
-  border: 10px  black;
+  border: 10px black;
   border-style: double;
   display: flex;
   align-items: center;
@@ -130,13 +154,13 @@ Text.job::selection {
   border-radius: 0;
 }
 
-
 .more-btn a:hover span {
   background-color: var(--secondry-color);
 }
 
 @media screen and (max-width: 768px) {
-  .landing, .box-section {
+  .landing,
+  .box-section {
     padding: 80px 15px;
     flex-direction: column-reverse;
   }
