--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -140,12 +140,22 @@ Text.job::selection {
 
 .photo-handler {
   min-width: 250px;
-  height: 250px;
+  height: 350px;
   border: 10px black;
   border-style: double;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+.photo-handler::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(214, 213, 210,0.05);
 }
 
 .photo-handler img {
