--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -66,11 +66,11 @@
   width: 50%;
 }
 
-.Text .name::selection,
+*::selection,
 .Text .title::selection,
 Text.job::selection {
   color: transparent;
-  background-color: rgb(8, 1, 1);
+  background-color: var(--main-color);
 }
 
 .Text .title {
