--- a/src/Components/AboutStyle.css
+++ b/src/Components/AboutStyle.css
@@ -35,6 +35,13 @@
 .stack {
   margin: 30px 15px 30px 0;
   font-size: 1.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.stack .icon {
+  width: 35px;
 }
 #About i {
   margin: 1px 25px;
