--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  padding: 30px 10px;
+  /* padding: 10px; */
   border-top: 5px solid var(--border-color);
   display: flex;
   align-items: center;
@@ -9,19 +9,28 @@
   /* background-color: #c6c5c2; */
   font-size: 1rem;
   font-weight: 900;
+  
 }
 
 .personal-data {
   width: 70%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
+}
+.personal-data > div {
+  margin: 0;
+  /* border: 4px solid; */
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .bold {
   font-weight: bold;
-  margin: 0 10px;
-  margin-bottom: 25px;
+  margin: 15px 10px;
   display: inline-block;
 }
 
@@ -40,11 +49,18 @@ h4 {
   font-size: 1.02rem;
 }
 @media screen and (max-width: 510px) {
+  .footer {
+    border: none;
+  }
+
   .personal-data {
     width: 100%;
+    justify-content: center;
+  }
+  .bold {
+    margin: 0;
   }
   @media screen and (max-width: 320px) {
-   
     .footer a {
       font-size: 0.8rem;
     }
