--- a/src/Components/AboutStyle.css
+++ b/src/Components/AboutStyle.css
@@ -7,7 +7,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
+   /* box-shadow: var(--border-color) 5px 5px 1px 1px; */
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+   transition: all 0.4s linear;
+ }
+ #About:hover {
+   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+ }
+ 
 #About .container {
   align-items: center;
 }
@@ -17,6 +24,7 @@
   border-bottom: 3px solid;
   /* color: black; */
   text-align: center;
+  
 }
 
 @media screen and (max-width: 425px) {
@@ -31,6 +39,7 @@
 
 #About .box {
   display: flex;
+  
 }
 .stack {
   margin: 30px 15px 30px 0;
