--- a/src/Components/HeaderStyle.css
+++ b/src/Components/HeaderStyle.css
@@ -2,14 +2,20 @@
 /* @import url('https://unpkg.com/css.gg@2.0.0/icons/css/mail.css'); */
 
 :root {
+  /* --main-color: #d98b42; */
   --main-color: #d6d5d2;
+  /* --border-color:white; */
   --border-color: black;
+  /* --saturated-color: rgba(0,0,0,0.6); */
   --select-color: white;
   --main-margin: 35px;
   --main-padding: 60px 30px;
+  --coloor:linear-gradient(90deg, white, #bdb9ab);
+ 
 }
 .App {
-  background-color: #d6d5d2;
+  background-color: var(--main-color);
+  /* background-image: var(--coloor); */
   /* color: black; */
   transition: all 0.4s ease-in-out;
 }
@@ -48,12 +54,13 @@
 }
 a {
   text-decoration: none;
-  color: var(--border-color);
+  color: var(--saturated-color);
 }
 header {
   /* color: black; */
   width: 100%;
   margin-bottom: var(--main-margin);
+  /* background-image: linear-gradient(120deg, var(--main-color) , brown); */
   /* background-color: #d6d5d2; */
 }
 .container {
@@ -166,7 +173,7 @@ header a {
 }
 
 header a:hover {
-  color: white;
+  color: var(--select-color);
   /* border: 1px solid var(--main-color); */
   transform: rotate(10deg);
   transform: scale(1.09);
