--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -16,7 +16,7 @@
   justify-content: center;
   overflow: hidden;
   /* background-color: transparent; */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: all 0.4s linear;
 }
 .box-section:hover {
@@ -122,7 +122,9 @@
 
 .photo-handler {
   min-width: 250px;
-  height: 350px;
+  height: 300px;
+  border-radius: 50%;
+  overflow: hidden;
   border: 10px var(--border-color);
   border-style: double;
   display: flex;
@@ -144,6 +146,8 @@
   width: 100%;
   height: 100%;
   border-radius: 0;
+  object-position: top;
+  object-fit: cover;
 }
 
 .more-btn a:hover span {
