--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -123,7 +123,7 @@
 .photo-handler {
   min-width: 250px;
   height: 300px;
-  border-radius: 50%;
+  border-radius: 0%;
   overflow: hidden;
   border: 10px var(--border-color);
   border-style: double;
@@ -146,7 +146,7 @@
   width: 100%;
   height: 100%;
   border-radius: 0;
-  object-position: top;
+  object-position: center;
   object-fit: cover;
 }
 
