--- a/src/Components/work.css
+++ b/src/Components/work.css
@@ -107,6 +107,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -120,6 +121,7 @@
 .work .overlay-project p {
   transform: scale(0);
   transition: all 0.3s linear;
+  color: white;
 }
 
 .date {
