--- a/src/Components/AboutStyle.css
+++ b/src/Components/AboutStyle.css
@@ -51,6 +51,14 @@
 .stack .icon {
   width: 35px;
 }
+.tech-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px 0;
+  gap: 0px;
+
+}
 #About i {
   margin: 1px 25px;
   font-size: 2.3rem;
@@ -145,8 +153,10 @@ i.fa-react {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.2s linear;
   /* align-self: flex-start; */
 }
+
 @media screen and (max-width: 768px) {
   #About {
     padding: 80px 15px;
