--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -69,7 +69,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 50%;
+  width: 70%;
 }
 
 *::selection {
@@ -81,6 +81,9 @@
 .Text .title {
   font-size: 1rem;
   margin: 20px 0;
+}
+.Text .name {
+  font-size: 1.5rem;
 }
 .job {
   font-size: 1.5rem;
