--- a/src/Components/AboutStyle.css
+++ b/src/Components/AboutStyle.css
@@ -118,17 +118,23 @@ i.fa-react {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   flex-wrap: nowrap;
   margin: 50px 5px;
   font-size: 1.3rem;
   text-align: center;
 }
-.About-me-content .section:first-child {
-  width: 70%;
-}
+ .About-me-content .section div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 15px;
+} 
 
-#About p {
+#About  .section p {
   width: 100%;
+  /* min-width: 800px; */
   /* color: black; */
   font-size: 1.2rem;
 }
@@ -141,9 +147,11 @@ i.fa-react {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   padding: 0 0 15px;
   /* line-height: 1; */
+  width: 100%;
+  /* min-width: 800px; */
 }
 .flag {
   margin-left: 5px;
@@ -180,14 +188,15 @@ i.fa-react {
   }
   #About p {
     width: 100%;
-    /* color: black; */
-    font-size: 1.2rem;
+    font-weight: 300;
+    font-size: 1rem;
+    line-height: 1.6;
     text-align: center;
   }
   .boldy {
     font-weight: 800;
     /* display: block; */
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: 0 0 15px;
   }
   #About .my-photo {
