--- a/src/Components/LandingStyle.css
+++ b/src/Components/LandingStyle.css
@@ -62,7 +62,7 @@
 }
 
 .Text {
-  font-size: 2.36rem;
+  font-size: 2.4rem;
   font-weight: 500;
   text-transform: uppercase;
   margin: 25px 0;
@@ -78,15 +78,17 @@
   background-color: var(--select-color);
 }
 
-.Text .title {
-  font-size: 1rem;
-  margin: 20px 0;
-}
 .Text .name {
   font-size: 1.5rem;
 }
 .job {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+.Text .title {
+  font-size: 1rem;
+  margin: 20px 0;
+  font-weight: 300;
 }
 
 /* .my-Work-btn, */
